@@ -39,9 +39,11 @@ Version 0.06
 Version 0.07
 ============
 
-2004-02-09      - [cjm] added cache option to storenode.pl
+2005-02-09      - [cjm] added cache option to storenode.pl
                 -       escapes tabs and newlines with -rows switch
                 -       added check-resources.pl
 
-2004-03-06      - [cjm] added support for loading XORT-style XML
+2005-03-06      - [cjm] added support for loading XORT-style XML
                 -       nodes are only made dbsafe if requested
+
+2005-03-18      - [cjm] added include_metadata option
